todays -> today in navbar

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="left-nav">
   <a href="index.html">Home</a>
-  <a href="todays.html">Today's Image</a>
+  <a href="today.html">Today's Image</a>
   <a href="all.html">All Images</a>
   </div>
   <div class="right-nav">
