--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,3 +148,16 @@ button {
   color: #999; /* grey timestamp */
   margin-left: 5px;
 }
+
+.emote-img {
+  width: 40px;
+  height: 40px;
+  vertical-align: middle;
+  margin-left: 5px;
+}
+
+.chat-emote {
+  display: flex;
+  width: 100px;
+  align-items: center;
+}
