--- a/components/navbar.html
+++ b/components/navbar.html
@@ -3,6 +3,7 @@
   <a href="index.html">Home</a>
   <a href="today.html">Today's Image</a>
   <a href="all.html">All Images</a>
+  <a href="messages.html">Chat</a>
   </div>
   <div class="right-nav">
     <div id="nav-auth"></div>
