--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,6 +4,7 @@
   <a href="today.html">Today's Image</a>
   <a href="all.html">All Images</a>
   <a href="messages.html">Chat</a>
+  <a href="posts.html">Posts</a>
   </div>
   <div class="right-nav">
     <div id="nav-auth"></div>
