--- a/stylesheet.css
+++ b/stylesheet.css
@@ -245,7 +245,7 @@ button:active {
 .chat-message {
   display: flex;
   align-items: flex-start;
-  margin-bottom: 10px;
+  margin-top: 10px;
   overflow-x: hidden;
   gap: 10px;
   padding-right: 30px;
@@ -253,7 +253,7 @@ button:active {
 }
 
 .chat-message.same-user {
-  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .chat-left {
@@ -267,8 +267,8 @@ button:active {
 }
 
 .chat-pfp {
-  width: 40px;
-  height: 40px;
+  width: 34px;
+  height: 34px;
   border-radius: 50%;
   object-fit: cover;
 }
@@ -297,6 +297,7 @@ button:active {
 .chat-header {
   display: flex;
   gap: 6px;
+  margin-bottom: 4px;
   align-items: center;
 
 }
@@ -319,6 +320,7 @@ button:active {
 
 .chat-timestamp {
   font-style: italic;
+  font-size: 10px;
   color: #aaaaaa; /* grey timestamp */
   margin-left: 5px;
 }
@@ -404,7 +406,7 @@ button:active {
     overflow-x: hidden;
     border: 1px solid #ddd;
     padding: 8px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     font-family: monospace;
 }
 
@@ -412,7 +414,7 @@ button:active {
 .chat-input-area {
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 8px;
   background-color: rgb(232, 231, 236);
   border-radius: 10px;
   flex-shrink: 0; /* Prevent input area from shrinking */
@@ -432,8 +434,13 @@ button:active {
   border: none;
   border-radius: 6px;
   padding: 10px 15px;
-  margin-left: 8px;
+
   cursor: pointer;
+}
+
+.chat-input-area > * {
+  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .chat-input-area button:hover {
@@ -488,4 +495,83 @@ button:active {
 .delete-message-btn:hover {
   opacity: 0.8;
   transform: translateY(-50%);
+}
+
+
+
+/* POSTS FORMATTING */
+
+/* .post-container {
+
+} */
+
+.post {
+  background: #e6e6e6;
+  border-radius: 18px;
+  padding: 14px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 15px rgba(83, 83, 83, 0.4);;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.post-header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.post-pfp {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.post-username {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600;
+  opacity: 0.9;
+}
+
+.post-image, .post-video {
+  height: 100%;
+  min-height: 100px;
+  max-height: 400px;
+  max-width: 100%;
+  border-radius: 14px;
+  margin-top: 8px;
+}
+
+.caption {
+  margin-top: 8px;
+  font-size: 0.95rem;
+}
+
+.post-timestamp {
+  display: block;
+  margin-top: 4px;
+  font-size: 0.75rem;
+  opacity: 0.5;
+}
+
+.post-interactions {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 12px;
+}
+
+.icon-btn {
+  background: none;
+  border: none;
+  box-shadow: none;
+  font-size: 1.3rem;
+  cursor: pointer;
+  transition: transform 0.15s ease;
+}
+
+.icon-btn:hover {
+  transform: scale(1.2);
 }
